--- a/postgres-helm-operator/helm-charts/postgres-chart/templates/deployment.yaml
+++ b/postgres-helm-operator/helm-charts/postgres-chart/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
       - name: {{.Values.container.name}}
-        image: "{{.Values.image}}"
+        image: "{{.Values.image.registry}}/{{.Values.image.repository}}:{{.Values.image.tag}}" 
         ports:
         - containerPort: {{.Values.container.port}}
           protocol: TCP
