--- a/postgres-helm-operator/deploy/crds/postgres.example.com_v1alpha1_postgres_cr.yaml
+++ b/postgres-helm-operator/deploy/crds/postgres.example.com_v1alpha1_postgres_cr.yaml
@@ -9,7 +9,7 @@ spec:
     name: primary
     port: 5432
   fullnameOverride: ""
-  image: registry.access.redhat.com/rhscl/postgresql-10-rhel7
+  image: registry.access.redhat.com/rhscl/postgresql-10-rhel7:1
   imagePullSecrets: []
   name: primary
   nameOverride: ""
